# nightswatch

./: .gitignore  Cargo.toml  LICENSE  justfile
.cargo/: config.toml
nodejs/nightswatch/: package.json
nodejs/nightswatch-os-arch/: Cargo.toml  package.json
rust/: ok
rust/nightswatch/: Cargo.toml
rust/nightswatch/src/: client.rs  daemon.rs  error.rs  lib.rs
rust/nightswatch/src/platform/: mod.rs
rust/nightswatch/src/platform/cli/: daemon.rs  mod.rs  watch.rs
rust/nightswatch/src/platform/messages/: change.rs  connect.rs  message.rs  mod.rs
rust/nightswatch/src/platform/socket/: mod.rs  socket.rs  tcp_server.rs
rust/nightswatch_cli/: Cargo.toml
rust/nightswatch_cli/src/: main.rs
