[workspace]
resolver = "2"

members = [
  "./rust/nightswatch",
  "./rust/nightswatch_cli",
  "./nodejs/nightswatch-os-arch",
]

[workspace.dependencies]
clap = "^4.5.26"

[profile.release]
opt-level = 3
debug = false
lto = true
strip = "debuginfo"
panic = 'unwind'
incremental = false
codegen-units = 1
rpath = false