[workspace]
resolver = "2"

members = [
  "./rust/nightswatch",
  "./rust/nightswatch_cli",
  "./nodejs/nightswatch-os-arch",
]

[workspace.dependencies]
clap = "^4.0.0"
notify-debouncer-full = "^0.5.0"
serde = { version = "^1.0.0", features = ["derive"] }
bincode = "^1.0.0"

[profile.release]
opt-level = 3
debug = false
lto = true
strip = "debuginfo"
panic = 'unwind'
incremental = false
codegen-units = 1
rpath = false