[package]
name = "nightswatch"
version = "0.0.0-local"
edition = "2021"

[features]
cli = ["dep:clap"]

[dependencies]
clap = { workspace = true, features = ["derive"], optional = true }
notify-debouncer-full = { workspace = true }
serde = {  workspace = true, features = ["derive"] }
bincode = {  workspace = true }
thiserror = "2.0.11"
normalize-path = { workspace = true }